# 42-Post-Common-Core-Projects

./: predict.py  train.py
ft_linear_regression/: README.md  data.csv  predict.py  theta_values.txt  train.py  visualize.py
go/to_do_list_app/: main.go
piscine_data_science/: .env
piscine_data_science/0_Creation_of_a_DB/: .env  docker-compose.yml
python_for_data_science/0_Starting/ex00/: Hello.py
python_for_data_science/0_Starting/ex01/: format_ft_time.py
python_for_data_science/0_Starting/ex02/: find_ft_type.py
python_for_data_science/0_Starting/ex03/: NULL_not_found.py
python_for_data_science/0_Starting/ex04/: whatis.py
python_for_data_science/0_Starting/ex05/: building.py
python_for_data_science/0_Starting/ex06/: filterstring.py  ft_filter.py
python_for_data_science/0_Starting/ex07/: sos.py
python_for_data_science/0_Starting/ex08/: Loading.py
python_for_data_science/0_Starting/ex09/: LICENSE  README.md  ft_package.py  pyproject.toml
python_for_data_science/0_Starting/ex09/ft_package/: README.md  setup.py
python_for_data_science/0_Starting/ex09/ft_package/ft_package/: __init__.py
python_for_data_science/1_Array/ex00/: give_bmi.py
python_for_data_science/1_Array/ex01/: array2D.py
python_for_data_science/1_Array/ex02/: load_image.py
python_for_data_science/1_Array/ex03/: zoom.py
python_for_data_science/1_Array/ex04/: rotate.py
python_for_data_science/1_Array/ex05/: pimp_image.py  tester.py
python_for_data_science/2_DataTable/ex00/: load_csv.py
python_for_data_science/2_DataTable/ex01/: aff_life.py
(+13 files in other folders)
