[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name="baalbade", email="baalbade@student.42.fr" },
]
description = "A sample test package"
readme = "README.md"
license = { file = "LICENSE", name = "MIT" }
classifiers = []

[project.urls]
"Homepage" = "https://github.com/baalbade/42-Post-Common-Core-Projects/tree/main/python_for_data_science/0_Starting/ex09/ft_package"

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"
